reinforcestrategycreator_pipeline/hpo_results/dqn/dqn_hpo_quick_test/trainable_1b866_00000_0_batch_size=64,buffer_size=100000,exploration_final_eps=0.0579,exploration_fraction=0.0507,exploration_init_2025-06-07_16-24-22/error.txt
Failure # 1 (occurred at 2025-06-07_16-24-24)
[36mray::ImplicitFunc.train()[39m (pid=3723459, ip=37.27.65.57, actor_id=6dbfdd6a2425239e9e19797901000000, repr=trainable)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/alessio/Personal/ReinforceStrategyCreatorV2/reinforcestrategycreator_pipeline/.venv/lib/python3.12/site-packages/ray/tune/trainable/trainable.py", line 330, in train
    raise skipped from exception_cause(skipped)
  File "/home/alessio/Personal/ReinforceStrategyCreatorV2/reinforcestrategycreator_pipeline/.venv/lib/python3.12/site-packages/ray/air/_internal/util.py", line 107, in run
    self._ret = self._target(*self._args, **self._kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/alessio/Personal/ReinforceStrategyCreatorV2/reinforcestrategycreator_pipeline/.venv/lib/python3.12/site-packages/ray/tune/trainable/function_trainable.py", line 45, in <lambda>
    training_func=lambda: self._trainable_func(self.config),
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/alessio/Personal/ReinforceStrategyCreatorV2/reinforcestrategycreator_pipeline/.venv/lib/python3.12/site-packages/ray/tune/trainable/function_trainable.py", line 261, in _trainable_func
    output = fn()
             ^^^^
  File "/home/alessio/Personal/ReinforceStrategyCreatorV2/reinforcestrategycreator_pipeline/src/training/hpo_optimizer.py", line 177, in trainable
    worker_data_manager = DataManager()
                          ^^^^^^^^^^^^^
TypeError: DataManager.__init__() missing 2 required positional arguments: 'config_manager' and 'artifact_store'
